# unr_object_manipulation

./: CMakeLists.txt  README.md  package.xml  setup.py
baxter_table_setting/launch/: peer_connection.launch  peer_connection_baxter.launch
baxter_table_setting/params/: NodeDescriptionTest.yaml
baxter_table_setting/scripts/: peer_connection_interface.py  pick_place_service.py
cmake/: ManipulationGenHeaders.cmake
include/grasp_server_library/: grasp_server.h
scripts/: console_grasp_server.py
src/grasp_commander/: grasp_commander_service.cc
src/grasp_server_library/: grasp_server.cc  grasp_server_test.cc  wrap_grasp_server_python.cc
